--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -13,17 +13,18 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
+
 # theme: jekyll-theme-so-simple
 remote_theme: mmistakes/so-simple-theme
-skin: "/assets/css/skins/default.css"
+
 locale: en-US
-title: "개발 일지"
-description: ""
-baseurl: # the subpath of your site, e.g. "/blog"
-url: "https://chang97.github.io/"
-logo: "/images/logo.png"
+title: "So Simple"
+description: "A simple Jekyll theme for words and pictures."
+baseurl: "/so-simple-theme"
+url: "https://mmistakes.github.io"
+logo: "/images/so-simple-site-logo.png"
 date_format: "%B %-d, %Y"
-read_time: # reading time estimates, e.g. true
+read_time: true
 words_per_minute: # 200
 mathjax:
   enable: true
@@ -38,7 +39,7 @@ google_analytics: "UA-2011187-2"
 disqus:
   shortname: "sosimpletheme"
 twitter:
-  username: # site's Twitter username, e.g. "mmistakes"
+  username: "mmistakes"
 google_site_verification: "UQj93ERU9zgECodaaXgVpkjrFn9UrDMEzVamacSoQ8Y"
 
 # Liquid
@@ -56,7 +57,7 @@ paginate: 10
 paginate_path: /page:num/
 
 # Search
-search_full_content: true # can have performance implications for large sites
+search_full_content: false
 
 # Taxonomy pages
 category_archive_path: "/categories/#"
@@ -79,15 +80,23 @@ plugins:
   - jekyll-sitemap
   - jekyll-feed
   - jekyll-paginate
+  - jekyll-redirect-from
+
+# Collections
+collections:
+  recipes:
+    output: true
+    permalink: /:collection/:path/
 
 # Front Matter Defaults
 defaults:
-  # Posts defaults
+  # Post defaults
   - scope:
       path: "_posts"
       type: posts
     values:
       layout: post
+      comments: true
       share: true
 
 # Site Author
@@ -97,12 +106,18 @@ author:
   email:
   twitter: mmistakes
   links:
+    - title: Instagram
+      url: https://instagram.com/mmistakes
+      icon: fab fa-instagram
     - title: GitHub
-      url: https://github.com/Chang97
+      url: https://github.com/mmistakes
       icon: fab fa-github-square
 
 # Footer Links
 footer_links:
+  - title: Instagram
+    url: https://instagram.com/mmistakes
+    icon: fab fa-instagram
   - title: GitHub
-    url: https://github.com/Chang97
+    url: https://github.com/mmistakes
     icon: fab fa-github-square
